[project]
name = "compaction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "datasets==4.4.1",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "torch==2.8.0",
    "transformers==4.57.1",
    "vllm==0.11.0",
]
